# lambda-uc

./: CHANGELOG.md  README.md  default.nix  flake.nix  haskell-definitions.cabal  haskell-uc.cabal  lambda-uc.cabal  package.yaml  stack.yaml
.builds/: nix.yml
src/: ApproachMonad.hs  ApproachXMonad.hs  CryptoMonad.hs  GADTApproach.hs  HeterogenousList.hs  MPC.lhs  MachineMonad.hs  Types.hs  UC.hs
src/Control/Monad/UCHS/: Async.hs  Classes.hs  Local.hs  Sync.hs
src/Control/Monad/UCHS/Async/: SomeWTM.hs
src/Control/XFreer/: Join.hs
src/Control/XMonad/: Trans.hs  XAccum.hs  XWriter.hs
src/Data/: HList.hs
src/Ideas/: Monad.hs
src/LUCk/: Monad.hs  Syntax.hs  Types.hs  UC.hs
src/LUCk/Games/: Common.hs  SignatureScheme.hs  SymEncryption.hs  UCSignatureScheme.hs
src/LUCk/Monad/: Algo.hs  Async.hs  Class.hs  Extra.hs  InterT.hs  Sync.hs
src/LUCk/Monad/InterT/: SomeWT.hs
src/LUCk/Monad/InterT/Eval/: Async.hs  Oracle.hs  PC2.hs  UC.hs
src/LUCk/Syntax/: Algo.hs  Async.hs  Class.hs  Extra.hs  PrAlgo.hs  Sync.hs
src/LUCk/Syntax/Async/: Eval.hs  SomeWT.hs
src/LUCk/Syntax/Async/Eval/: Internal.hs
src/LUCk/Syntax/Sync/: Eval.hs
src/LUCk/UC/: Core.hs  Flatten.hs  Shell.hs
src/LambdaUC/: Syntax.hs  Types.hs  UC.hs
src/LambdaUC/Games/: Common.hs  SignatureScheme.hs  SymEncryption.hs  UCSignatureScheme.hs
src/LambdaUC/Syntax/: Async.hs  PrAlgo.hs  Sync.hs
src/LambdaUC/Syntax/Async/: Eval.hs  PC2.hs  SomeWT.hs
src/LambdaUC/Syntax/Async/Eval/: Internal.hs
src/LambdaUC/Syntax/Sync/: Eval.hs
src/LambdaUC/UC/: Core.hs  Flatten.hs  Shell.hs
src/MachineMonad/: SomeWTM.hs
src/UCHS/: Monad.hs  Types.hs
src/UCHS/Games/: Common.hs  SignatureScheme.hs  SymEncryption.hs
src/UCHS/Monad/: Algo.hs  AsyncAlgo.hs  Class.hs  Extra.hs  InterT.hs  SyncAlgo.hs
src/UCHS/Monad/AsyncAlgo/: SomeWTM.hs
src/UCHS/Monad/InterT/: Eval.hs  SomeWT.hs
src/UCHS/Monad/InterT/Eval/: Async.hs  Oracle.hs  PC2.hs  UC.hs
src/UCHS/Protocols/: P2.hs
test/Async/: Main.hs
test/EuCma/: Main.hs
test/MachineMonad/: Main.hs
test/TypeChecks/: Main.hs
