cabal-version: 2.2

name:           haskell-uc
version:        0.1.0.0
category:       Web
homepage:       https://git.sr.ht/~ph14nix/haskell-uc
author:         Ivan Oleynikov
maintainer:     ivan.oleynikov95@gmail.com
copyright:      2023 Ivan Oleynikov
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

common deft
  build-depends:
      base >=4.7 && <5
    , mtl
    , transformers
    , random
    , async
    , stm
    , freer-indexed
    , free
    , random
    , data-default
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Werror=incomplete-patterns
  default-language: GHC2021
  default-extensions:
    -- The only obstacle to declaring this as safe haskell is DerivingVia we use here
    -- Safe
    DataKinds
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    PatternSynonyms
    QualifiedDo
    TypeFamilies

library
  import: deft
  exposed-modules:
      Control.XFreer.Join
      Data.HList
      UCHS.Types
      UCHS.Monad
      UCHS.Monad.Class
      UCHS.Monad.Algo
      UCHS.Monad.InterT
      UCHS.Monad.InterT.Eval
      UCHS.Monad.InterT.SomeWT
      UCHS.Monad.Extra
      UCHS.Games.Common
      UCHS.Games.SignatureScheme
      UCHS.Games.SymEncryption
      -- Ideas.Monad
  other-modules:
  hs-source-dirs:
      src
  tested-with: GHC == 9.6.6

common deft-test
  import: deft
  build-depends:       base
                     , haskell-uc
                     , tasty
                     , tasty-hunit
                     , HUnit
  ghc-options:
    -Wno-unused-imports
    -Wno-missing-export-lists
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language:    GHC2021

test-suite type-checks
  import: deft-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test/TypeChecks/
  build-depends:       should-not-typecheck

test-suite machine-monad
  import: deft-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test/Async/

test-suite eu-cma
  import: deft-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test/EuCma/
